[package]
name = "configops"
version = "1.0.1"
authors = ["David Ehnert <contact@davidlokison.com>"]
description = "Customizable configuration storage via traits"
license = "MIT"
repository = "https://github.com/DavidLokison/configops"
readme = "README.md"
edition = "2024"

[dependencies]
serde = { version = "1.0", default-features = false }
thiserror = "2.0"
etcetera = { version = "0.11.0", optional = true }
toml = { version = "1.1", optional = true }

[features]
default = ["etcetera", "toml"]
etcetera = ["dep:etcetera"]
toml = ["dep:toml"]
